basic update table

--- a/index.html
+++ b/index.html
@@ -54,27 +54,48 @@
   						<colgroup span="4"></colgroup>
   						<tr>
     							<th>Document</th>
-   							 <th>last modified date</th>
-    							<th>creation data</th>
-    							<th>resource location</th>
+							<th>Team</th>
+   							 <th>LastModifiedDate</th>
+    							<th>CreationDate</th>
+    							<th>ResourceLocation</th>
  						 </tr>
 						  <tr>
    							 <td><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></td>
+							  <td>Cloud</td>
    							 <td>2021/04/30</td>
    							 <td>2021/04/20</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/java-spring-demo-p1">Github</a></td>
   						</tr>
   						<tr>
-   							 <td>Sweden</td>
-  							  <td>Stockholm</td>
-  							  <td>9 million</td>
-  							  <td>Swedish</td>
-						  </tr>
+   							 <td><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></td>
+							  <td>Cloud</td>
+   							 <td>2021/06/30</td>
+   							 <td>2021/06/20</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/java-spring-test-p2">Github</a></td>
+						</tr>
+						<tr>
+   							 <td><a href = "network.html">iiidevops_install.html</a></td>
+							  <td>Cloud</td>
+   							 <td>2021/08/30</td>
+   							 <td>2021/08/20</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/iiidevops_install">Github</a></td>
+						</tr>
+						<tr>
+   							 <td><a href = "Tekton_CI-CD_d1.html">tekton_argocd_pipeline_setup.html</a></td>
+							  <td>Cloud</td>
+   							 <td>2021/09/30</td>
+   							 <td>2021/09/20</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/native_cicd_ph1">Github</a></td>
+						</tr>
+						<tr>
+   							 <td><a href = "Tekton_CI-CD_d2.html">tekton_argocd_pipeline_setup2.html</a></td>
+							  <td>Cloud</td>
+   							 <td>2021/10/30</td>
+   							 <td>2021/10/20</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/native_cicd_ph2">Github</a></td>
+						</tr>
 					</table>
 					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
-					<p><a href = "network.html">iiidevops_install.html</a></>
-				        <p><a href = "Tekton_CI-CD_d1.html">tekton_argocd_pipeline_setup.html</a></>
-					<p><a href = "Tekton_CI-CD_d2.html">tekton_argocd_pipeline_setup2.html</a></>
 					<p><a href = "wazuh.html">wazuh.html</a></>
 					<p><a href = "suricata_centos8.html">suricata_centos8.html</a></>
 					<p><a href = "CentOSExterenel.html">CentOS7Exterenel.html</a></>
