--- a/index.html
+++ b/index.html
@@ -94,14 +94,49 @@
    							 <td>2021/11/05</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/native_cicd_ph2">Github</a></td>
 						</tr>
+						<tr>
+   							 <td><a href = "OS-backup_update.html">MAC Enviroment</a></td>
+							 <td></td>
+   							 <td>2021/4/23</td>
+   							 <td>2021/3/23</td>
+   							 <td>none</td>
+						</tr>
+						<tr>
+   							 <td><a href = "wazuh.html">wazuh.html</a></td>
+							 <td></td>
+   							 <td>2021/6/31</td>
+   							 <td>2021/5/31/</td>
+   							 <td>none</td>
+						</tr>
+						<tr>
+   							 <td><a href = "suricata_centos8.html">suricata_centos8.html</a></td>
+							 <td></td>
+   							 <td>2021/6/31</td>
+   							 <td>2021/5/31/</td>
+   							 <td>none</td>
+						</tr>
+						<tr>
+   							 <td><a href = "CentOSExterenel.html">CentOSExterenel.html</a></td>
+							 <td></td>
+   							 <td>2021/7/17</td>
+   							 <td>2021/7/2/</td>
+   							 <td>none</td>
+						</tr>
+						<tr>
+   							 <td><a href = "DebianExternel.html">DebianExternel.html</a></td>
+							 <td></td>
+   							 <td>2021/8/19</td>
+   							 <td>2021/7/19/</td>
+   							 <td>none</td>
+						</tr>
+						<tr>
+   							 <td><a href = "bpfCO-RE.html">bpfCO-RE.html</a></td>
+							 <td></td>
+   							 <td>2021/11/19</td>
+   							 <td>2021/10/21/</td>
+   							 <td>none</td>
+						</tr>
 					</table>
-					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
-					<p><a href = "wazuh.html">wazuh.html</a></>
-					<p><a href = "suricata_centos8.html">suricata_centos8.html</a></>
-					<p><a href = "CentOSExterenel.html">CentOS7Exterenel.html</a></>
-					<p><a href = "DebianExternel.html">DebianExternel.html</a></>  
-					<p><a href = "bpfCO-RE.html">bpfCO-RE.html</a></> <span>Fri Nov 19 11:57:38 2021</span>
-					<p><a href = "BPF CO-RE ppt new ver 0.5.pptx">BPF CO-RE ppt new ver 0.5.pptx</a></>
 					
 			    	<li>Template</li>
 					<p><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a>
