--- a/index.html
+++ b/index.html
@@ -96,42 +96,42 @@
 						</tr>
 						<tr>
    							 <td><a href = "OS-backup_update.html">MAC Enviroment</a></td>
-							 <td></td>
+							 <td>Edge</td>
    							 <td>2021/4/23</td>
    							 <td>2021/3/23</td>
    							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "wazuh.html">wazuh.html</a></td>
-							 <td></td>
+							 <td>Edge</td>
    							 <td>2021/6/31</td>
    							 <td>2021/5/31/</td>
    							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "suricata_centos8.html">suricata_centos8.html</a></td>
-							 <td></td>
+							 <td>Edge</td>
    							 <td>2021/6/31</td>
    							 <td>2021/5/31/</td>
    							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "CentOSExterenel.html">CentOSExterenel.html</a></td>
-							 <td></td>
+							 <td>Edge</td>
    							 <td>2021/7/17</td>
    							 <td>2021/7/2/</td>
    							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "DebianExternel.html">DebianExternel.html</a></td>
-							 <td></td>
+							 <td>Edge</td>
    							 <td>2021/8/19</td>
    							 <td>2021/7/19/</td>
    							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "bpfCO-RE.html">bpfCO-RE.html</a></td>
-							 <td></td>
+							 <td>Edge</td>
    							 <td>2021/11/19</td>
    							 <td>2021/10/21/</td>
    							 <td>none</td>
