--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
    							 <td>2021/10/21/</td>
    							 <td>none</td>
 						</tr>
+						<tr>
+   							 <td><a href = "NinoX-Testing-ver_0_7.html">NinoX-Testing-ver_0_7.html</a></td>
+							 <td>SD</td>
+   							 <td>2021/12/13</td>
+   							 <td>2021/12/13/</td>
+   							 <td>none</td>
+						</tr>
 					</table>
 				
 				<li>Software Methodology</li>
