--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 					
 			    	<li>Template</li>
 					<p><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a>
-					<p><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX_Kanban-Board </a>
+					<p><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX Kanban-Board </a>
+					<p><a href = "NinoX_Schedule_Template_Ver 0.91">NinoX Schedule Ver 0.91</a>
 
 			</ul>  
 		</div>
