--- a/index.html
+++ b/index.html
@@ -155,9 +155,39 @@
 	
 					
 			    	<li>Template</li>
-					<p><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a>
-					<p><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX Kanban-Board </a>
-					<p><a href = "NinoX_Schedule_Template_Ver 0.91.xlsx">NinoX Schedule Ver 0.91</a>
+					<table>
+  						<colgroup span="4"></colgroup>
+  						<tr>
+    							<th>Document</th>
+							<th>Type</th>
+   							<th>LastModifiedDate</th>
+    							<th>CreationDate</th>
+    							<th>ResourceLocation</th>
+ 						</tr>
+						<tr>
+   							 <td><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a></td>
+							 <td>PowerPoint</td>
+   							 <td>2021/4/23</td>
+   							 <td>2021/3/23</td>
+   							 <td>none</td>
+						</tr>
+						<tr>
+   						<td><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX Kanban-Board </a></td>
+							 <td>Schedule</td>
+   							 <td>2021/4/23</td>
+   							 <td>2021/3/23</td>
+   							 <td>none</td>
+						</tr>	
+						<tr>
+   						<td><a href = "NinoX_Schedule_Template_Ver 0.91.xlsx">NinoX Schedule Ver 0.91</a>
+							 <td>Schedule</td>
+   							 <td>2022/2/8</td>
+   							 <td>2022/2/8</td>
+   							 <td>none</td>
+						</tr>
+
+					</table>		
+						
 
 			</ul>  
 		</div>
