--- a/index.html
+++ b/index.html
@@ -53,102 +53,103 @@
 					<table>
   						<colgroup span="4"></colgroup>
   						<tr>
-    							<th>Document</th>
-							<th>Team</th>
+    							<th>Subject</th>
+							<th>Type</th>
    							 <th>LastModifiedDate</th>
     							<th>CreationDate</th>
     							<th>ResourceLocation</th>
  						 </tr>
 						  <tr>
    							 <td><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></td>
-							  <td>Cloud</td>
-   							 <td>2021/04/30</td>
-   							 <td>2021/04/20</td>
+							 <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/java-spring-demo-p1">Github</a></td>
+   							 <td>2021/04/20</td>
+   							 <td>2021/04/30</td>
   						</tr>
   						<tr>
    							 <td><a href = "Java_Testing.html">Java_Testing.html</a></td>
-							  <td>Cloud</td>
+							 <td>Cloud</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/java-spring-test-p2">Github</a></td>
    							 <td>2021/08/20</td>
    							 <td>2021/08/15</td>
-   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/java-spring-test-p2">Github</a></td>
 						</tr>
 						<tr>
    							 <td><a href = "network.html">iiidevops_install.html</a></td>
-							  <td>Cloud</td>
-   							 <td>2021/09/20</td>
-   							 <td>2021/09/15</td>
+							 <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/iiidevops_install">Github</a></td>
+   							 <td>2021/09/15</td>
+   							 <td>2021/09/20</td>
+
 						</tr>
 						<tr>
    							 <td><a href = "Tekton_CI-CD_d1.html">tekton_argocd_pipeline_setup.html</a></td>
-							  <td>Cloud</td>
-   							 <td>2021/11/22</td>
-   							 <td>2021/10/08</td>
+							 <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/native_cicd_ph1">Github</a></td>
+   							 <td>2021/10/08</td>
+   							 <td>2021/11/22</td>
 						</tr>
 						<tr>
    							 <td><a href = "Tekton_CI-CD_d2.html">tekton_argocd_pipeline_setup2.html</a></td>
 							  <td>Cloud</td>
-   							 <td>2021/11/23</td>
-   							 <td>2021/11/05</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/native_cicd_ph2">Github</a></td>
+   							 <td>2021/11/05</td>
+   							 <td>2021/11/23</td>
 						</tr>
 						<tr>
    							 <td><a href = "OS-backup_update.html">MAC Enviroment</a></td>
 							 <td>Edge</td>
+   							 <td>none</td>
    							 <td>2021/4/23</td>
    							 <td>2021/3/23</td>
-   							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "wazuh.html">wazuh.html</a></td>
 							 <td>Edge</td>
+   							 <td>none</td>
    							 <td>2021/6/31</td>
    							 <td>2021/5/31/</td>
-   							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "suricata_centos8.html">suricata_centos8.html</a></td>
 							 <td>Edge</td>
-   							 <td>2021/6/31</td>
-   							 <td>2021/5/31/</td>
    							 <td>none</td>
+   							 <td>2021/5/31/</td>
+   							 <td>2021/6/31</td>
 						</tr>
 						<tr>
    							 <td><a href = "CentOSExterenel.html">CentOSExterenel.html</a></td>
 							 <td>Edge</td>
-   							 <td>2021/7/17</td>
-   							 <td>2021/7/2/</td>
    							 <td>none</td>
+   							 <td>2021/7/2/</td>
+   							 <td>2021/7/17</td>
 						</tr>
 						<tr>
    							 <td><a href = "DebianExternel.html">DebianExternel.html</a></td>
 							 <td>Edge</td>
-   							 <td>2022/1/18</td>
-   							 <td>2021/7/19/</td>
    							 <td>none</td>
+   							 <td>2021/7/19/</td>
+   							 <td>2022/1/18</td>
 						</tr>
 						<tr>
    							 <td><a href = "bpfCO-RE.html">bpfCO-RE.html</a></td>
 							 <td>Edge</td>
-   							 <td>2021/11/19</td>
-   							 <td>2021/10/21/</td>
    							 <td>none</td>
+   							 <td>2021/10/21/</td>
+   							 <td>2021/11/19</td>
 						</tr>
 						<tr>
    							 <td><a href = "NinoX-Testing-ver_0_7.html">NinoX-Testing-ver_0_7.html</a></td>
 							 <td>SD</td>
+   							 <td>none</td>
    							 <td>2021/12/13</td>
    							 <td>2021/12/13/</td>
-   							 <td>none</td>
 						</tr>
 						<tr>
    							 <td><a href = "CGreen TestDouble ETDD OOC DP ver 0.5.pptx">CGreen TestDouble ETDD OOC DP ver 0.5.pptx</a></td>
 							 <td>SD</td>
-   							 <td>2021/12/28</td>
-   							 <td>2021/12/24/</td>
    							 <td>none</td>
+   							 <td>2021/12/24/</td>
+   							 <td>2021/12/28</td>
 						</tr>
 					</table>
 				
@@ -158,32 +159,33 @@
 					<table>
   						<colgroup span="4"></colgroup>
   						<tr>
-    							<th>Document</th>
+    							<th>Subject</th>
 							<th>Type</th>
-   							<th>LastModifiedDate</th>
+							<th>ResourceLocation</th>
     							<th>CreationDate</th>
-    							<th>ResourceLocation</th>
+							<th>LastModifiedDate</th>
+
  						</tr>
 						<tr>
-   							 <td><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a></td>
-							 <td>PowerPoint</td>
-   							 <td>2021/4/23</td>
-   							 <td>2021/3/23</td>
-   							 <td>none</td>
+   							<td><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a></td>
+							<td>PowerPoint</td>
+   							<td>none</td>
+							<td>2021/3/23</td>
+   							<td>2021/4/23</td>
 						</tr>
 						<tr>
-   						<td><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX Kanban-Board </a></td>
-							 <td>Schedule</td>
-   							 <td>2021/4/23</td>
-   							 <td>2021/3/23</td>
-   							 <td>none</td>
+   							<td><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX Kanban-Board </a></td>
+							<td>Schedule</td>
+   							<td>none</td>
+   							<td>2021/3/23</td>
+							<td>2021/4/23</td>
 						</tr>	
 						<tr>
    						<td><a href = "NinoX_Schedule_Template_Ver 0.91.xlsx">NinoX Schedule Ver 0.91</a>
-							 <td>Schedule</td>
-   							 <td>2022/2/8</td>
-   							 <td>2022/2/8</td>
-   							 <td>none</td>
+							<td>Schedule</td>
+   							<td>none</td>
+   							<td>2022/2/8</td>
+   							<td>2022/2/8</td>
 						</tr>
 
 					</table>		
