--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
    							<td>2021/4/23</td>
 						</tr>
 						<tr>
-   							<td><a href = "https://docs.google.com/forms/d/e/1FAIpQLScq8m-NwrO2YzUqqcosjX_ovZUfUNync1lIn2sDdLcqaXlnZQ/viewform">Overtime order </a><</td>
+   							<td><a href = "https://docs.google.com/forms/d/e/1FAIpQLScq8m-NwrO2YzUqqcosjX_ovZUfUNync1lIn2sDdLcqaXlnZQ/viewform">Overtime order </a></td>
 							<td>HR</td>
    							<td>none</td>
 							<td>2021/3/23</td>
