--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<p><h2>Documents</h2></p>
 			<ul>
 				<li>Tranining</li>
-					<table border="0.1">
+					<table>
   						<colgroup span="4"></colgroup>
   						<tr>
     							<th>Subject</th>
@@ -156,7 +156,7 @@
 	
 					
 			    	<li>Template</li>
-					<table border="0.1">
+					<table>
   						<colgroup span="4"></colgroup>
   						<tr>
     							<th>Subject</th>
@@ -203,7 +203,7 @@
 			<ul>
 			    	<li>HR</li>
 					
-					<table border="0.1">
+					<table border="0">
   						<colgroup span="4"></colgroup>
   						<tr>
     							<th>Subject</th>
