--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<ul>
 			    	<li>HR</li>
 					
-					<table border="0">
+					<table>
   						<colgroup span="4"></colgroup>
   						<tr>
     							<th>Subject</th>
