--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
    							 <td>2021/11/23</td>
 						</tr>
 						<tr>
+   							 <td><a href = "2022-02-09-production-cicd-prototype.pdf">Argo Framework production prototype</a></td>
+							  <td>Cloud</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/argo_framework_production_prototype">Github</a></td>
+   							 <td>2022/02/09</td>
+   							 <td>2022/02/09</td>
+						</tr>
+						<tr>
    							 <td><a href = "OS-backup_update.html">MAC Enviroment</a></td>
 							 <td>Edge</td>
    							 <td>none</td>
