Argo Framework change add pdf extension

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    							 <td>2021/11/23</td>
 						</tr>
 						<tr>
-   							 <td><a href = "2022-02-09-production-cicd-prototype.pdf">Argo Framework production prototype</a></td>
+   							 <td><a href = "2022-02-09-production-cicd-prototype.pdf">Argo Framework production prototype.pdf</a></td>
 							  <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/argo_framework_production_prototype">Github</a></td>
    							 <td>2022/02/09</td>
