--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
    							 <td>2021/11/23</td>
 						</tr>
 						<tr>
+   							 <td><a href = "proxmox-server-setup-with-iiidevops.pdf">Proxmox Server Setup w/iiidevops.pdf</a></td>
+							  <td>Cloud</td>
+   							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/proxmox_server_setup">Github</a></td>
+   							 <td>2022/02/09</td>
+   							 <td>2022/02/10</td>
+						</tr>
+						<tr>
    							 <td><a href = "2022-02-09-production-cicd-prototype.pdf">Argo Framework production prototype.pdf</a></td>
 							  <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/argo_framework_production_prototype">Github</a></td>
