--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
 
 						</tr>
 						<tr>
+   							 <td><a href = "III DevOps V2.html">III DevOps V2.html</a></td>
+							 <td>Cloud</td>
+   							 <td></td>
+   							 <td>2022/02/16</td>
+   							 <td>2022/02/16</td>
+
+						</tr>		
+						
+						<tr>
    							 <td><a href = "Tekton_CI-CD_d1.html">tekton_argocd_pipeline_setup.html</a></td>
 							 <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/native_cicd_ph1">Github</a></td>
