--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
   						<tr>
     							<th>Subject</th>
 							<th>Type</th>
-   							 <th>LastModifiedDate</th>
+   							 <th>ResourceLocation</th>
     							<th>CreationDate</th>
-    							<th>ResourceLocation</th>
+    							<th>LastModifiedDate</th>
  						 </tr>
 						  <tr>
    							 <td><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></td>
@@ -161,6 +161,13 @@
    							 <td>2021/11/19</td>
 						</tr>
 						<tr>
+   							 <td><a href = "OOC_BPF_Firewall.html">OOC_BPF_Firewall ver 0.5.html</a></td>
+							 <td>Edge</td>
+   							 <td>none</td>
+   							 <td>2022/2/18/</td>
+   							 <td>2022/2/24</td>
+						</tr>
+						<tr>
    							 <td><a href = "NinoX-Testing-ver_0_7.html">NinoX-Testing-ver_0_7.html</a></td>
 							 <td>SD</td>
    							 <td>none</td>
@@ -173,13 +180,6 @@
    							 <td>none</td>
    							 <td>2021/12/24/</td>
    							 <td>2021/12/28</td>
-						</tr>
-						<tr>
-   							 <td><a href = "OOC_BPF_Firewall.html">OOC_BPF_Firewall ver 0.3.html</a></td>
-							 <td>SD</td>
-   							 <td>none</td>
-   							 <td>2022/2/18/</td>
-   							 <td>2022/20/18</td>
 						</tr>
 					</table>
 				
