--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
    							 <td>2021/12/24</td>
    							 <td>2021/12/28</td>
 						</tr>
+						<tr>
+   							 <td><a href = "xilinx_and_PYNQ_v0.2.html">xilinx_and_PYNQ_v0.2.html</a></td>
+							 <td>SD</td>
+   							 <td>none</td>
+   							 <td>2022/05/13</td>
+   							 <td>2022/05/13</td>
+						</tr>
 					</table>
 				
 	
