--- a/index.html
+++ b/index.html
@@ -168,6 +168,13 @@
    							 <td>2022/3/3</td>
 						</tr>
 						<tr>
+   							 <td><a href = "xilinx_and_PYNQ.html">xilinx_and_PYNQ_v0.2.html</a></td>
+							 <td>Edge</td>
+   							 <td>none</td>
+   							 <td>2022/05/13</td>
+   							 <td>2022/05/13</td>
+						</tr>
+						<tr>
    							 <td><a href = "NinoX-Testing-ver_0_7.html">NinoX-Testing-ver_0_7.html</a></td>
 							 <td>SD</td>
    							 <td>none</td>
@@ -180,13 +187,6 @@
    							 <td>none</td>
    							 <td>2021/12/24</td>
    							 <td>2021/12/28</td>
-						</tr>
-						<tr>
-   							 <td><a href = "xilinx_and_PYNQ_v0.2.html">xilinx_and_PYNQ_v0.2.html</a></td>
-							 <td>SD</td>
-   							 <td>none</td>
-   							 <td>2022/05/13</td>
-   							 <td>2022/05/13</td>
 						</tr>
 					</table>
 				
