--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
     							<th>CreationDate</th>
     							<th>LastModifiedDate</th>
  						 </tr>
-						  <tr>
+						 <tr>
+   							 <td><a href = "industry-4.0.pdf">Industry-4.0.pdf</a></td>
+							  <td>General</td>
+   							 <td><a href = "">Nonw</a></td>
+   							 <td>2022/05/30</td>
+   							 <td>2022/07/08</td>
+						</tr>
+						 <tr>
    							 <td><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></td>
 							 <td>Cloud</td>
    							 <td><a href = "https://github.com/NinoX-RD/DevPaul/tree/master/java-spring-demo-p1">Github</a></td>
