--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						 <tr>
    							 <td><a href = "industry-4.0.pdf">Industry-4.0.pdf</a></td>
 							  <td>General</td>
-   							 <td><a href = "">Nonw</a></td>
+   							 <td><a href = "">None</a></td>
    							 <td>2022/05/30</td>
    							 <td>2022/07/08</td>
 						</tr>
