--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
    							 <td>2021/12/24</td>
    							 <td>2021/12/28</td>
 						</tr>
+						<tr>
+   							 <td><a href = "CNN GRU ppt.pptx">CNN GRU ppt ver 0.1.pptx</a></td>
+							 <td>SD</td>
+   							 <td>none</td>
+   							 <td>2022/09/08</td>
+   							 <td>2022/09/08</td>
+						</tr>
 					</table>
 				
 	
