--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
    							 <td>2022/09/08</td>
    							 <td>2022/09/08</td>
 						</tr>
+												<tr>
+   						<td><a href = "wistron_orientation.pdf">Wistron_orientation.pdf</a></td>
+							 <td>SD</td>
+   							 <td>none</td>
+   							 <td>2022/09/08</td>
+   							 <td>2022/09/08</td>
+						</tr>
 					</table>
 				
 	
