--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
 						</tr>
 												<tr>
    						<td><a href = "wistron_orientation.pdf">Wistron_orientation.pdf</a></td>
-							 <td>SD</td>
+							 <td>Presentaion</td>
    							 <td>none</td>
-   							 <td>2022/09/08</td>
-   							 <td>2022/09/08</td>
+   							 <td>2022/09/21</td>
+   							 <td>2022/09/21</td>
 						</tr>
 					</table>
 				
